welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
				gauche()
                                      ^SnakeBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
			if (getDirection() == Direction.OUEST) {
                        ^SnakeBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFaceMur() && position()) {return true}
                ^