welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
	def fonctionTest(): Boolean = {
		def position(): Boolean = {
			if (getDirection() == Direction.EST) {
				gauche()
				if (estFaceMur()) {return true}
				droite()
			}
			if (getDirection() == Direction.OUEST) {
				droite()
				if (estFaceMur()) {return true}
				gauche()
			}
		}
		if (estFaceMur() && position()) {return true}
	}
	while(!fonctionTest()) {
		if (!estFaceMur()) {
			avance()
		}
		else {
			if (getDirection() == Direction.EST) {
				gauche()
				avance()
				gauche()
			}
			else {
				droite()
				avance()
				droite()
			}
		}
	}
}
